--- a/NoteKeeper/Views/ItemDetailPage.xaml
+++ b/NoteKeeper/Views/ItemDetailPage.xaml
@@ -12,11 +12,11 @@
                     FontSize="Medium" >
             </Picker>
         
-        <Entry Text="{Binding Heading}" 
+        <Entry Text="{Binding Note.Heading}" 
                x:Name="NoteHeading" 
                Placeholder="Note heading" 
                FontSize="Medium" />
-        <Editor Text="{Binding Text}" 
+        <Editor Text="{Binding Note.Text}" 
                 x:Name="NoteText" 
                 AutoSize="TextChanges" 
                 Placeholder="Note text" 
